criação e utilizaçã0 da classe hide-warning para esconder div warning

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
         </section>
 
-        <div class="warning">
+        <div class="warning hide-warning">
             <div>
                 <i class="ph ph-warning-circle ph-fill"></i>
                 <span>O item foi removido da lista.</span>
@@ -85,6 +85,7 @@
                 <i class="ph ph-x"></i>
             </button>
         </div>
+
     </main>
     
 </body>
