--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
+
+  <script src="./main.js" defer></script>
 </head>
 <body>
     <header>
@@ -30,7 +32,7 @@
     <main>
         <section class="add-item">
             <input type="text" placeholder="Adicione um novo item" id="item">
-            <button>Adicionar item</button>
+            <button onclick="addItem()">Adicionar item</button>
         </section>
 
         <section class="list">
