--- a/index.html
+++ b/index.html
@@ -35,50 +35,9 @@
             <button onclick="addItem()">Adicionar item</button>
         </section>
 
-        <section class="list">
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="list" id="item-1">
-                    <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="checked">
-                    </div>
-                    <label for="item-1">Maça</label>
-                </div>
+        <section class="list"></section>
 
-                <button>
-                    <img src="./assets/trash-icon.svg" alt="trash-icon">
-                </button>
-            </div>
-            <div class="item">
-                <div>
-                    <input type="checkbox" name="list" id="item-2">
-                    <div class="custom-checkbox">
-                        <img src="./assets/checked.svg" alt="checked">
-                    </div>
-                    <label for="item-2">Melância</label>
-                </div>
-
-                <button>
-                    <img src="./assets/trash-icon.svg" alt="trash-icon">
-                </button>
-            </div>
-
-                <div class="item">
-                    <div>
-                        <input type="checkbox" name="list" id="item-3">
-                        <div class="custom-checkbox">
-                            <img src="./assets/checked.svg" alt="checked">
-                        </div>
-                        <label for="item-3">Melão</label>
-                    </div>
-    
-                    <button>
-                        <img src="./assets/trash-icon.svg" alt="trash-icon">
-                    </button>
-                </div>
-        </section>
-
-        <div class="warning hide-warning">
+        <div class="hide-warning">
             <div>
                 <i class="ph ph-warning-circle ph-fill"></i>
                 <span>O item foi removido da lista.</span>
